# marco-polo-cli

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: openapi.yaml
src/marco_polo_cli/: __init__.py  __main__.py  cli.py  client.py  native_export.py  svp_to_mp4.py
tests/: test_cli.py  test_integration_live.py
tests/fixtures/: sync-auth.har  sync.json  video-auth.har
