[metadata]
name = marco-polo-cli
version = 0.1.0
description = Export Marco Polo videos and metadata from captured app API auth.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tony Xiao
keywords = marco-polo, video, export, cli
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
native =
    frida>=16

[options.entry_points]
console_scripts =
    marco-polo = marco_polo_cli.cli:main
